[project]
name = "micropython-network-utils"
description = "Micropython network interface utility package."
authors = [{name = "Andrew Ridyard", email = "andyrids.uncapped698@passmail.net"}]
maintainers = [{name = "Andrew Ridyard", email = "andyrids.uncapped698@passmail.net"}]
version = "0.0.1"
license = {file = "LICENSE.md"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers=[
    # 3 - Alpha | 4 - Beta | 5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    # Python versions
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Embedded Systems",
]
keywords = ["micropython", "package", "microcontroller", "network"]
dependencies = []

[dependency-groups]
dev = [
    "bump-my-version>=1.1.2",
    "micropython-rp2-rpi-pico-w-stubs>=1.25.0.post3",
    "micropython-stdlib-stubs>=1.25.0",
    "mpremote>=1.25.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.5",
]

[project.urls]
Repository = "https://gitlab.com/micropython-iot-projects/libraries/micropython-network-utils"
Issues = "https://gitlab.com/micropython-iot-projects/libraries/micropython-network-utils/-/issues"

[tool.uv.sources]
network-utils = { workspace = true }
network-utils-mqtt = { workspace = true }

[tool.uv.workspace]
members = [
    "network-utils",
    #"network-utils-mqtt"
]

[tool.ruff]
exclude = ["lib", "env"]
indent-width = 4
line-length = 80

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle
    "E",   # pycodestyle
    "ERA", # commented out code
    "W",   # pycodestyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/{test_}*" = ["D102"] # Missing docstring in public method

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.bumpversion]
current_version = "0.0.1"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"
tag_message = "chore: tag version update {current_version} -> {new_version}."
allow_dirty = false
message = "chore: version update {current_version} -> {new_version}."

# update pyproject.toml version
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# update package.json version
[[tool.bumpversion.files]]
filename = "network-utils/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

# update package manifest.py version
[[tool.bumpversion.files]]
filename = "network-utils/manifest.py"
search = 'version="{current_version}"'
replace = 'version="{new_version}"'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["network-utils/network_utils"]