[project]
name = "micropython-networkutils-mqtt"
description = "MQTT extension package for micropython-networkutils."
authors = [{name = "Andrew Ridyard", email = "andyrids.uncapped698@passmail.net"}]
maintainers = [{name = "Andrew Ridyard", email = "andyrids.uncapped698@passmail.net"}]
version = "0.1.0"
requires-python = ">=3.10"
classifiers=[
    # 3 - Alpha | 4 - Beta | 5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    # Python versions
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Embedded Systems",
]
keywords = ["micropython", "package", "microcontroller", "network"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["networkutils"]

[tool.hatch.build.targets.wheel]
only-include = ["networkutils"]

[tool.hatch.build.targets.sdist.hooks.custom]
# custom build hook configuration
path = "../scripts/build/cross_compile.py"
# custom build hook options
only-include = ["networkutils"]
compiler-options = ["-O2"]
